# variable-length-quantity

./: .flake8  .gitignore  Makefile  pyproject.toml  test_vlq.py  vlq.py
