[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "vlq"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
deal = "^4.6.0"
flake8 = "^3.9.2"
hypothesis = "^6.13.14"
mutmut = "^2.1.0"
mypy = "^0.812"
pylint = "^2.8.3"
pytest = "^6.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
